:tomato: Pomodoro PWA Commit: start_url fix

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name": "Pomodoro",
     "short_name": "Pomodoro",
     "description": "Um timer simples e para a técnica Pomodoro.",
-    "start_url": "/",
-    "scope": "/",
+    "start_url": "/pomodoro/",
+    "scope": "/pomodoro/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "##121A2D",
